# Unclock

./: .gitignore  LICENSE  README.md
PowerSaver/PowerSaver/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  PowerSaver.csproj  Styles.xaml  app.manifest
PowerSaver/PowerSaver/Services/: CpuControl.cs  Elevated.cs  GpuControl.cs  HardwareDetector.cs  StatsService.cs
PowerSaver/PowerSaver/amd_bridge/: CMakeLists.txt  main.cpp
installer/: setup.iss
release-v0.2/amd_bridge/: CMakeLists.txt
release-v2.1/: Unclock.deps.json
